--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "axios": "^0.27.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "gitmoji-cli": "^6.0.1",
+    "global": "^4.4.0",
     "mongoose": "^6.5.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
